# churn_prediction

./: README.md  pyproject.toml
conf/base/: catalog.yml  parameters_dataviz.yml  parameters_eda.yml  parameters_feature_engineering.yml  parameters_inferencia.yml  parameters_ingestion.yml  parameters_modeling.yml  spark.yml
src/churn_analytics/: __init__.py  __main__.py  pipeline_registry.py  settings.py  spark_session.py
src/churn_analytics/datasets/: spark_model_dataset.py
src/churn_analytics/pipelines/dataviz/: __init__.py  nodes.py  pipeline.py
src/churn_analytics/pipelines/eda/: nodes.py  pipeline.py
src/churn_analytics/pipelines/feature_engineering/: __init__.py  nodes.py  pipeline.py
src/churn_analytics/pipelines/inferencia/: __init__.py  nodes.py  pipeline.py
src/churn_analytics/pipelines/ingestion/: nodes.py  pipeline.py
src/churn_analytics/pipelines/modeling/: __init__.py  nodes.py  pipeline.py
streamlit_app/: app.py
tests/pipelines/dataviz/: test_pipeline.py
tests/pipelines/eda/: test_pipeline.py
tests/pipelines/feature_engineering/: test_pipeline.py
tests/pipelines/inferencia/: test_pipeline.py
tests/pipelines/ingestion/: test_pipeline.py
tests/pipelines/modeling/: test_pipeline.py
